fixed search-icon vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ a{
     text-decoration: none;
 }
 
+#search-a > span{
+	line-height: inherit;
+}
+
 #random-article-p{
 	margin-left:8px; 
 } 
